Styled Races Page, whitespace on right needs fixin

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 .nav-item{
     font-family: 'MedievalSharp', cursive;
-    font-size: .9em;
+    font-size: .95em;
 }
 
 .tab-content{
